--- a/app/src/main/res/layout/favorite_recipes_item_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_item_layout.xml
@@ -1,24 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="result"
-            type="com.example.foodrecipe.model.Result" />
+            name="favoritesEntity"
+            type="com.example.foodrecipe.data.local.entity.FavoritesEntity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/recipesRowLayout"
-        onRecipeClickListener="@{result}"
+        android:id="@+id/favoriteRecipesRowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/row_cardView"
+            android:id="@+id/favorite_row_cardView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
@@ -27,27 +26,27 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/lightMediumGray"
+            app:strokeColor="@color/strokeColor"
             app:strokeWidth="1dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                android:background="@color/cardBackgroundColor">
 
                 <ImageView
-                    android:id="@+id/recipe_imageView"
+                    android:id="@+id/favorite_recipe_imageView"
+                    loadImageFromUrl="@{favoritesEntity.result.image}"
                     android:layout_width="200dp"
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
-                    loadImageFromUrl="@{result.image}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/title_textView"
+                    android:id="@+id/favorite_title_textView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -56,94 +55,95 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/courgette"
                     android:maxLines="2"
-                    android:text="@{result.title}"
-                    android:textColor="@color/darker"
+                    android:text="@{favoritesEntity.result.title}"
+                    android:textColor="@color/titleColor"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/recipe_imageView"
+                    app:layout_constraintStart_toEndOf="@+id/favorite_recipe_imageView"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/description_textView"
+                    android:id="@+id/favorite_description_textView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="@{result.summary}"
-                    android:textColor="@color/darkGray"
-                    app:layout_constraintEnd_toEndOf="@+id/title_textView"
-                    app:layout_constraintStart_toStartOf="@+id/title_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/title_textView" />
+                    parseHtml="@{favoritesEntity.result.summary}"
+                    android:textColor="@color/descriptionColor"
+                    app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
+                    app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView" />
 
                 <ImageView
-                    android:id="@+id/heart_imageView"
+                    android:id="@+id/favorite_heart_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="36dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/heart_textView"
-                    app:layout_constraintStart_toStartOf="@+id/heart_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
+                    app:layout_constraintEnd_toEndOf="@+id/favorite_heart_textView"
+                    app:layout_constraintStart_toStartOf="@+id/favorite_heart_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                     app:srcCompat="@drawable/ic_heart"
-                    app:tint="@color/red" />
+                    app:tint="@color/red"
+                    android:contentDescription="@string/image" />
 
                 <TextView
-                    android:id="@+id/heart_textView"
+                    android:id="@+id/favorite_heart_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="100"
-                    setNumberOfLikes="@{result.aggregateLikes}"
+                    android:text="@{String.valueOf(favoritesEntity.result.aggregateLikes)}"
+                    android:textAlignment="center"
                     android:textColor="@color/red"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toStartOf="@+id/description_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/heart_imageView" />
+                    app:layout_constraintStart_toStartOf="@+id/favorite_description_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_heart_imageView" />
 
                 <ImageView
-                    android:id="@+id/clock_imageView"
+                    android:id="@+id/favorite_clock_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="@+id/favorite_clock_textView"
+                    app:layout_constraintStart_toStartOf="@+id/favorite_clock_textView"
+                    app:layout_constraintTop_toTopOf="@+id/favorite_heart_imageView"
+                    app:srcCompat="@drawable/ic_clock"
                     app:tint="@color/yellow"
-                    app:layout_constraintEnd_toEndOf="@+id/clock_textView"
-                    app:layout_constraintStart_toStartOf="@+id/clock_textView"
-                    app:layout_constraintTop_toTopOf="@+id/heart_imageView"
-                    app:srcCompat="@drawable/ic_clock" />
+                    android:contentDescription="@string/image"/>
 
                 <TextView
-                    android:id="@+id/clock_textView"
+                    android:id="@+id/favorite_clock_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="100"
-                    setNumberOfMinutes="@{result.readyInMinutes}"
-                    android:textColor="@color/yellow"
+                    android:text="@{String.valueOf(favoritesEntity.result.readyInMinutes)}"
                     android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/heart_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />
+                    android:textColor="@color/yellow"
+                    app:layout_constraintStart_toEndOf="@+id/favorite_heart_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_clock_imageView" />
 
                 <ImageView
-                    android:id="@+id/leaf_imageView"
+                    android:id="@+id/favorite_leaf_imageView"
+                    applyVeganColor="@{favoritesEntity.result.vegan}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    applyVeganColor="@{result.vegan}"
-                    app:layout_constraintEnd_toEndOf="@+id/leaf_textView"
-                    app:layout_constraintStart_toStartOf="@+id/leaf_textView"
-                    app:layout_constraintTop_toTopOf="@+id/clock_imageView"
-                    app:srcCompat="@drawable/ic_leaf" />
+                    app:layout_constraintEnd_toEndOf="@+id/favorite_leaf_textView"
+                    app:layout_constraintStart_toStartOf="@+id/favorite_leaf_textView"
+                    app:layout_constraintTop_toTopOf="@+id/favorite_clock_imageView"
+                    app:srcCompat="@drawable/ic_leaf"
+                    android:contentDescription="@string/image"/>
 
                 <TextView
-                    android:id="@+id/leaf_textView"
+                    android:id="@+id/favorite_leaf_textView"
+                    applyVeganColor="@{favoritesEntity.result.vegan}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="100"
-                    applyVeganColor="@{result.vegan}"
+                    android:text="@string/vegan"
                     android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/clock_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/leaf_imageView" />
+                    app:layout_constraintStart_toEndOf="@+id/favorite_clock_textView"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_leaf_imageView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
