--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -21,8 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:cardCornerRadius="6dp"
+            readApiResponse3="@{mainViewModel.foodJokeResponse}"
+            readDatabase3="@{mainViewModel.readFoodJoke}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -65,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:visibility="invisible"
+            readApiResponse3="@{mainViewModel.foodJokeResponse}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -73,10 +76,11 @@
             android:id="@+id/food_joke_error_imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-
             android:alpha="0.5"
             android:src="@drawable/ic_sad"
             android:visibility="invisible"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -92,6 +96,8 @@
             android:layout_marginTop="8dp"
             android:alpha="0.5"
             android:text="@string/error"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="invisible"
